package dominio;

public class Mensajeria {
}
