package dominio;

public class UserFav {
}
